Updated files for GitHub page.

--- a/whats-new.html
+++ b/whats-new.html
@@ -22,7 +22,7 @@
 	<header>
 		<div class="row navigation brown-1">
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 centered">
-				<a class="button header stand-alone" href="http://averager.x10.mx">
+				<a class="button header stand-alone" href="/averager">
 					<span class="glyphicon glyphicon-chevron-left" style="font-size:12px"></span>
 					<span class="long">Back</span>
 				</a>
@@ -131,6 +131,7 @@
 			</h3>
 		</div>
 		<h5 class="centered">Copyright 2016. Developed by <a href="https://ca.linkedin.com/in/brycestpierre" target="_blank">Bryce St. Pierre</a>.</h5>
+		<h5 class="centered">View code <a href="https://github.com/BryceStPierre/averager" target="_blank">on GitHub</a>.</h5>
 		<a href="#" id="success-trigger" data-toggle="modal" data-target=".success-modal"></a>
 	</div>
 	<div class="modal fade feedback-modal" tabindex="-1" role="dialog" aria-labelledby="feedbackModal">
