--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<span class="glyphicon glyphicon-plus"></span>
 					<span class="long">Add Course</span>
 				</span>
-				<a class="button header stand-alone" id="updates" href="whats-new" title="What's New">
+				<a class="button header stand-alone" id="updates" href="whats-new.html" title="What's New">
 					<span class="glyphicon glyphicon-flash"></span>
 					<span class="mid">What's New</span>
 				</a>
@@ -105,6 +105,7 @@
 			</h3>
 		</div>
 		<h5 class="centered">Copyright 2016. Developed by <a href="https://ca.linkedin.com/in/brycestpierre" target="_blank">Bryce St. Pierre</a>.</h5>
+		<h5 class="centered">View code <a href="https://github.com/BryceStPierre/averager" target="_blank">on GitHub</a>.</h5>
 		<a href="#" id="success-trigger" data-toggle="modal" data-target=".success-modal"></a>
 		
 		<div class="modal fade help-modal" tabindex="-1" role="dialog" aria-labelledby="helpModal">
